[package]
name = "codex-code-graph"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "codex_code_graph"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
ignore = { workspace = true }
nucleo = { workspace = true }
pathdiff = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha1 = { workspace = true }
syn = { version = "2", features = ["full", "visit"] }

[dev-dependencies]
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
